Fix order select wrong margin in the editor

--- a/assets/js/base/components/product-order-select/style.scss
+++ b/assets/js/base/components/product-order-select/style.scss
@@ -1,3 +1,3 @@
-p.wc-block-order-select {
+.wc-block-product-order-select {
 	margin-bottom: $gap-large;
 }
